k8s/apps/inventory/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    project: cloud-design-pfe
