k8s/apps/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: apps
  labels:
    app: inventory
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
